re PR c++/55003 ([C++11] Member function pointer not working as constexpr initializer)

PR c++/55003
	* decl.c (cp_finish_decl): Force instantiation of an
	auto static data member.

From-SVN: r196069